Jupyter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
spec:
  rules:
    - host: aiworkflow.com
      http:
        paths:
          - path: /hub
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
    - host: aiworkflow.com
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
